# video_transcribe_analyze

./: .gitignore  README.md  pyproject.toml
src/: main.py
